# airashe-json

./: .gitignore  CMakeLists.txt  Dockerfile  conanfile.py
cmake/: airashe-json-config.cmake.in
src/: jparser.cpp  jparser.hpp  json_parser.cpp  json_parser.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/behaviours/: jarray_behaviour.hpp  jbehaviour_factory.hpp  jboolean_behaviour.cpp  jboolean_behaviour.hpp  jcontainer_behaviour.cpp  jcontainer_behaviour.hpp  jnull_behaviour.cpp  jnull_behaviour.hpp  jnumber_behaviour.cpp  jnumber_behaviour.hpp  jstring_behaviour.cpp  jstring_behaviour.hpp  jtoken_behaviour.hpp
src/structs/: jindex.cpp  jindex.hpp  jmodifiers.hpp  jproperty.hpp  jtoken.cpp  jtoken.hpp  jtoken_type.hpp  jtoken_value.hpp  jtoken_value_container.hpp
tests/: CMakeLists.txt  code_json_creation.cc  parsing.cc
tools/: create_package.ps1  create_package.sh  create_project.ps1  create_project.sh
