cmake_minimum_required(VERSION 3.29)
set (AIRASHEJSON_VERSION 0.5.0)

project(airashe-json LANGUAGES CXX VERSION ${AIRASHEJSON_VERSION})

# include
include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

# setup variables
set(AIRASHEJSON_PROJECT_NAME "airashe-json")
set(AIRASHEJSON_TARGET_NAME ${AIRASHEJSON_PROJECT_NAME}Targets)
set(AIRASHEJSON_INCLUDE_DIR ${CMAKE_INSTALL_INCLUDEDIR}/${AIRASHEJSON_PROJECT_NAME})
set(AIRASHEJSON_INSTALL_CMAKE_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/${AIRASHEJSON_PROJECT_NAME})
set(AIRASHEJSON_CONFIGVERSION_FILE "${AIRASHEJSON_PROJECT_NAME}-config-version.cmake")
set(AIRASHEJSON_CONFIG_FILE "${AIRASHEJSON_PROJECT_NAME}-config.cmake")

# create target
add_library(${AIRASHEJSON_PROJECT_NAME} 
    src/json_parser.cpp
)
set_property(TARGET ${AIRASHEJSON_PROJECT_NAME} PROPERTY CXX_STANDARD 20)
set_target_properties(${AIRASHEJSON_PROJECT_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR})
add_library(${AIRASHEJSON_PROJECT_NAME}::${AIRASHEJSON_PROJECT_NAME} ALIAS ${AIRASHEJSON_PROJECT_NAME})

# set public api
set_target_properties(${AIRASHEJSON_PROJECT_NAME} PROPERTIES PUBLIC_HEADER 
    "src/json_parser.hpp"
)

# set include directories
target_include_directories(${AIRASHEJSON_PROJECT_NAME} PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/src>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

# Configure CMake find_package() config files.
configure_package_config_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/${AIRASHEJSON_CONFIG_FILE}.in"
    "${CMAKE_CURRENT_BINARY_DIR}/${AIRASHEJSON_CONFIG_FILE}"
    INSTALL_DESTINATION ${AIRASHEJSON_INSTALL_CMAKE_DIR}
)

write_basic_package_version_file(
    ${AIRASHEJSON_CONFIGVERSION_FILE}
    VERSION ${AIRASHEJSON_VERSION}
    COMPATIBILITY SameMajorVersion
)

# install CMake find_package() config files.
install(FILES
    ${CMAKE_CURRENT_BINARY_DIR}/${AIRASHEJSON_CONFIGVERSION_FILE}
    ${CMAKE_CURRENT_BINARY_DIR}/${AIRASHEJSON_CONFIG_FILE}
    DESTINATION ${AIRASHEJSON_INSTALL_CMAKE_DIR}
)

# install binaries
install(TARGETS ${AIRASHEJSON_PROJECT_NAME} 
        EXPORT ${AIRASHEJSON_TARGET_NAME} 
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
                COMPONENT ${AIRASHEJSON_PROJECT_NAME}_Runtime
                NAMELINK_COMPONENT ${AIRASHEJSON_PROJECT_NAME}_Development
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
                COMPONENT ${AIRASHEJSON_PROJECT_NAME}_Development
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
                COMPONENT ${AIRASHEJSON_PROJECT_NAME}_Runtime
        INCLUDES DESTINATION ${AIRASHEJSON_INCLUDE_DIR}
        PUBLIC_HEADER DESTINATION ${AIRASHEJSON_INCLUDE_DIR}
)

# install CMake targets
install(EXPORT ${AIRASHEJSON_TARGET_NAME}
    DESTINATION ${AIRASHEJSON_INSTALL_CMAKE_DIR}
    NAMESPACE ${AIRASHEJSON_PROJECT_NAME}::
    FILE ${AIRASHEJSON_TARGET_NAME}.cmake
    COMPONENT ${AIRASHEJSON_PROJECT_NAME}_Development
)

# install headers (so other packages can use them from include directory)
install(
    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/
    DESTINATION ${AIRASHEJSON_INCLUDE_DIR}
    FILES_MATCHING PATTERN "*.h*"
)